--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
   },
   "devDependencies": {
     "codeclimate-test-reporter": "0.0.4",
-    "echint": "^1.1.2",
-    "istanbul": "^0.3.14",
+    "echint": "^1.2.0",
+    "istanbul": "^0.3.15",
     "mocha": "^2.2.5",
     "should": "^6.0.3",
-    "standard": "^3.11.1"
+    "standard": "^4.2.0"
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "find-root": "^0.1.1"
+    "find-root": "^0.1.1",
+    "xtend": "^4.0.0"
   }
 }
