--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     ]
   },
   "devDependencies": {
-    "codeclimate-test-reporter": "0.0.4",
-    "echint": "^1.2.0",
-    "istanbul": "^0.3.15",
+    "codeclimate-test-reporter": "0.1.0",
+    "echint": "^1.3.0",
+    "istanbul": "^0.3.17",
     "mocha": "^2.2.5",
-    "should": "^6.0.3",
-    "standard": "^4.2.0"
+    "should": "^7.0.1",
+    "standard": "^4.5.2"
   },
   "dependencies": {
-    "debug": "^2.2.0",
+    "debug-log": "^1.0.0",
     "find-root": "^0.1.1",
     "xtend": "^4.0.0"
   }
